# esp32-nostr-client

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
libsecp256k1/: test.c
src/: bmp180.rs  clink.rs  main.rs  network.rs  nostr.rs  time.rs
