[package]
name = "iot_test"
version = "0.1.0"
authors = ["isaac-asdf <97187398+isaac-asdf@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
# Explicitly disable LTO which the Xtensa codegen backend has issues
lto = "off"
opt-level = "s"
#strip = "symbols"

[profile.dev]
# Explicitly disable LTO which the Xtensa codegen backend has issues
lto = "off"


[build-dependencies]
cc = "1.0.79"

[dependencies]
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi.git", rev="3bb9e8e", features = ["esp32", "embedded-svc", "wifi"] }
embedded-hal = "0.2.3"
esp-hal-common = { version = "0.9.0", features = ["esp32"] }
esp32-hal = { version = "0.12.0", features = [ "rt" ] }
smoltcp = { version = "0.9.1", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
critical-section = "1.1.1"
atomic-polyfill = "1.0.1"
log = "0.4.17"
embedded-svc = { version = "0.25.0", default-features = false, features = [] }
enumset = { version = "1", default-features = false }
linked_list_allocator = { version = "0.10.3", default-features = false, features = ["const_mut_refs"] }
embedded-io = "0.4.0"
fugit = "0.3.6"
heapless = { version = "0.7.14", default-features = false }
num-derive = { version = "0.3", features = ["full-syntax"] }
num-traits = { version = "0.2", default-features = false }
esp-println = { version = "0.4.0", features = ["log", "esp32"] }
esp-backtrace = { version = "0.6.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
hex-literal = "0.4.1"
base16ct = "0.2.0"
secp256k1 = {version = "0.27.0", default-features = false, features = ["serde", "rand", "recovery", "lowmemory"] }
embedded-websocket = { path = "../embedded-websocket", default-features = false }
sha2 = { version = "0.10.7", default-features = false }
