[package]
name = "iot_test"
version = "0.1.0"
authors = ["isaac-asdf <97187398+isaac-asdf@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.dev]
lto = "off"
[profile.release]
lto = "off"

[dependencies]
# base esp
esp32-hal = { version = "0.14.0", features = ["rt"] }
esp-backtrace = { version = "0.7.0", features = [
    "esp32",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }
esp-println = { version = "0.5.0", features = ["esp32", "log"] }

# wifi
smoltcp = { version = "0.10.0", default-features = false, features = [
    "proto-igmp",
    "proto-ipv4",
    "proto-dns",
    "socket-tcp",
    "packetmeta-id",
    "socket-icmp",
    "socket-udp",
    "socket-dns",
    "medium-ethernet",
    "proto-dhcpv4",
    "socket-raw",
    "socket-dhcpv4",
] }
embedded-svc = { version = "0.25.1", default-features = false, features = [] }
log = "0.4.18"
embedded-io = "0.5.0"
embedded-websocket = { version = "0.9.3", default-features = false }


# nostr specific
hex-literal = "0.4.1"
base16ct = "0.2.0"
nostr-nostd = "0.2.1"

# time fetch
ntp-nostd = "0.0.1"

[dependencies.esp-wifi]
git = "https://github.com/esp-rs/esp-wifi.git"
rev = "e685dfcb08f249f5c6402b2d8ebb5a6a152f40bd"
features = ["esp32", "wifi", "embedded-svc"]
